apply toList